--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Custom -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./scss/main.scss" />
   </head>
   <body>
     <div class="container">
